--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <div class="pageBox">
         <div id="app"></div>
     </div>
-    <script src="/dist/build.js"></script>
+    <script src="./dist/build.js"></script>
   </body>
 </html>
