--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>vue-simple-template</title>
+    <title>vue-datepicker</title>
   </head>
   <body>
     <div class="pageBox">
