--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>vue-datepicker</title>
+    <title>vue-date</title>
   </head>
   <body>
-    <div class="pageBox">
-        <div id="app"></div>
-    </div>
-    <script src="./dist/build.js"></script>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
